# DJANGO-PLATZI-COURSE

./: .gitignore  README.md  pyproject.toml
core/: settings.py  urls.py
my_first_app/: models.py  views.py
my_first_app/migrations/: 0001_initial.py  0002_car_year.py  0003_car_color.py
my_first_app/templates/my_first_app/: car_list.html
