[tool.poetry]
name = "couse-django-platzi"
version = "0.1.0"
description = "course the django in platzi"
authors = ["cristhian villca mamani <cristhian.vm.senior@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
